# helloworld-rust-wasi

./: Cargo.toml  Dockerfile  README.md  service.yaml
src/: main.rs
